dev/styles/partials/_teamPage.scss
.noManage {
    position: absolute;
    top: 150px;
    float: left;
}
.teamNameDisplay {
    // float: left;
    // font-size:2rem;
    display: inline-block;
    // position: relative;
    // top: 20px;
    margin: 0;
    
}

.teamHeader{
    margin-bottom: 20px;
    &::before {
        content: '';
        display: block;
        height: 2px;
        background-color: $darkMainColor;
        position: relative;
        bottom: -50px;
        width: 100%;
    }
}

.welcomeHead {
    margin:0;

}
.manageHead {
    float: right;
    font-size: 1.4rem;
    font-family: $montserrat;
    background-color: $mainColor;
    padding: 20px;
    text-decoration: none;
    color: $darkText;
    clear: both;
    position: relative;
    top: 60px;
}
.manageHead:hover,
.manageHead:focus {
    background-color: $accentColor;
}

//teampage buttons
.teamPageButtons{
    margin-top: 20px;
    div {
        float: left;
        margin-right: 20px;
    }
}

.upcoming {
    clear: both;
}
.Collapsible__trigger {
    font-family: $oswald;
    color: $lightText;
    font-size: 1.8rem;
    cursor: pointer;
    display: block;
    transition: all 0.3s ease;
    position: relative;
}
.is-closed::after, .is-open::after {
    content: '';
    display: block;
    width: 0;
    height: 0;
    border-style: solid;
    border-color: $lightText transparent transparent;
    position: absolute;
    right: 20px;
    top: 50%;
    transform: translateY(-50%);
}
.is-closed::after {
    border-width: 15px 8px 0 8px;
    border-color: $lightText transparent transparent;
}
.is-open::after {
    border-width: 0 8px 15px 8px;
    border-color: transparent transparent $lightText;
}
.is-closed,
.is-open {
    padding: 10px 20px;
    background-color: $mainColor;
    background-image: $gradient;
    &:hover,
    &:focus {
        background-color: $accentColor;
        background-image: none;
        color: $darkMainColor;
    }
    
}

.Collapsible__contentInner h4{
    margin: 0;
}

.innerGame {
    margin: 20px auto;
}

.rsvp {
    margin: 20px auto; 
    width: 95%;
}

.rsvp button {
    float: right;
    position: relative;
    text-align: center;
    margin-left: 20px;
}

.rsvp p {
        margin: 0;
        width: 40%;
        display: inline-block;
        line-height: 2rem;
        span {
            font-weight: bold;
        }
    }

.buttonYesNo {
    float: right;
    width: 40%;
}

.hrLine::after {
    content: '';
    width: 100%;
    border-bottom: solid 1px black;
    position: absolute;
    left: 0;
    top: 50%;
    z-index: 1;
}
.gameLocation h4,
.gameTime h4,
.attendanceLeft h4,
.yes h4, .no h4, .Pending h4 {
    float: left;
    // margin: 5px;
    font-size: 1.5rem;
    font-family: $montserrat;
    font-weight: 700;
}
.attendance p,
.gameLocation p,
.gameTime p
{
    float: right;
    // margin: 5px;
    // font-size: 1.2rem;
    margin: 0;

}
.yes p, .no p, .Pending p {
     margin: 5px;
    font-size: 1.2rem;

}
.attendance {
    float: left;
    
}
.gameLocation,
.gameTime,
.attendance {
    width: 100%;
    margin: 0 0 20px 0;
    &::before {
        content: '';
        display: block;
        height: 1px;
        background-color: rgba(0,0,0,0.2);
        position: relative;
        bottom: -30px;
        width: 100%;
        margin: 0 auto;
    }
}

.attendanceAnswer{
    width: 100%;
    padding: 5px;
}

.attendanceLeft {
    float: left;
    margin: 0;
}
.attendanceRight {
    float: right;
}
.attendanceBreakdown p{
    float: left;
    padding-left: 20px;
}
.removeButton{
    clear: both;
}
.attendanceAnswer {
    float: left;
    clear: both;
    width: 100%;
    text-align: center;
}
.yes, .no,  {
    float: left;

}
.Pending{
    display: inline-block;
    
}
.yes ul,
.no ul,
.Pending ul {
    padding: 0;
    list-style: none;
    margin: 0;
}

.yes, .no, .Pending {
    width: calc(33.3%);
}
.yes ul li,
.no ul li,
.Pending ul li {
    text-align: center;
    float: left;
    clear: both;
}

.noGames {
    margin: 0;
    padding-top: 13px;
}
// 940px 768px 480px
// @media (min-width: 430px) and (max-width: 480px)
// @media (max-width: 480px) {
//     .noGames, .noManage {
//         font-size: .8rem;
//         margin: 2px;
//     }
//     .teamNameDisplay, .upcoming {
//         font-size: 1.2rem;
//         margin-bottom: 25px;
        
//     }
//     .noManage {
//         position: relative;
//         top: -12px;
//         right: 118px;

//     }
    
//     .welcomeHead {
//         float: left;
//         clear: both;
//         position: relative;
//         top: 8px;
//     }
//     .manageHead {
//         font-size: 1.2rem;
//         position: relative;
//         padding: 8px 5px;
//         top: auto;
//         float: left;
//         margin-top: 16px;
//         margin-bottom: 8px;
//     }
//     .upcoming {
//         font-size: 1.2 rem;
//         margin-bottom: 5px;
//     }
//     .rsvp p{
//         font-size: 1.2rem;
//         margin: 0;
//         float: left;
//         width: 40%;
//         display: inline;
//     }
//     .buttonYesNo {
//         float: right;
//         width: 40%;
//     }
//     .rsvp button {
//         // transform: translateY(-80%);
//     }


}



//make the rsvp buttons a bit smaller for hierarchy
//bring response beneath each game header in to 95 prcent like what expands on the accordion

//run through the code, clean it up, take out commented code and console logs

